README: Tarea1 Terminado

--- a/Practica3/VC_P3_TAREAS.ipynb
+++ b/Practica3/VC_P3_TAREAS.ipynb
@@ -35,6 +35,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clase Moneda"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -124,6 +131,13 @@
     "\n",
     "# Muestra los resultados\n",
     "Moneda.mostrar_lista_monedas(monedas)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Función Para Mostrar Imagenes"
    ]
   },
   {
