README: Tarea 3 Terminado

--- a/Practica3/VC_P3_TAREAS.ipynb
+++ b/Practica3/VC_P3_TAREAS.ipynb
@@ -481,13 +481,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clasificación de microplásticos"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "TAREA: Estas tres imágenes han sido extraidas de las imágenes de mayor tamaño contenidas en la carpeta. Determina patrones geométricos para cada una de las tres clases y evalúa los aciertos y fallos con las imágenes completas la matriz de confusión. Para cada clase, determina el número de muestras que se clasifican correctamente de dicha clase, y el número de muestras que se clasifica incorrectamente por cada una de las otras dos clases.\n",
     "\n",
     "El el trabajo [SMACC: A System for Microplastics Automatic Counting and Classification](https://doi.org/10.1109/ACCESS.2020.2970498), las características geométricas utilizadas en dicho trabajo fueron:\n",
@@ -511,6 +504,13 @@
     "\n",
     "¿Qué es una matriz de confusión?\n",
     "Se utiliza para mostrar el comportamiento de un clasificador par alas distintas clases consideradas, se relacionan las etiquetas de las muestras anotadas frente a las predichas por el clasificador. Se busca una matriz diagonal, pero la perfección es infrecuente"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clasificación de Microplasticos"
    ]
   },
   {
