mascara de batman cuadra con la cara

--- a/Practica4/VC_P4_ENTREGA.ipynb
+++ b/Practica4/VC_P4_ENTREGA.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb Celda 1\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m normalizatorHS \u001b[39m=\u001b[39m faceutils\u001b[39m.\u001b[39mNormalization()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W0sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# Face detectors interface\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W0sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m FDet \u001b[39m=\u001b[39m FaceDetectors\u001b[39m.\u001b[39;49mFaceDetector()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W0sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m# Fonts\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W0sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m font \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mFONT_HERSHEY_SIMPLEX\n",
-      "File \u001b[0;32m~/Desktop/Universidad/VC/VC/Practica4/FaceDetectors.py:46\u001b[0m, in \u001b[0;36mFaceDetector.__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     39\u001b[0m righteyeCascadeFilePath \u001b[39m=\u001b[39m baseCascadePath \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39mhaarcascade_mcs_righteye.xml\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     40\u001b[0m \u001b[39m# LBP\u001b[39;00m\n\u001b[1;32m     41\u001b[0m \u001b[39m#lefteyeCascadeFilePath = baseCascadePath + 'classifierLE_LBP/cascade.xml'\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[39m#righteyeCascadeFilePath = baseCascadePath + 'classifierRE_LBP/cascade.xml'\u001b[39;00m\n\u001b[1;32m     43\u001b[0m \n\u001b[1;32m     44\u001b[0m \n\u001b[1;32m     45\u001b[0m \u001b[39m# build our cv2 Cascade Classifiers\u001b[39;00m\n\u001b[0;32m---> 46\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfaceCascade \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mCascadeClassifier(faceCascadeFilePath)\n\u001b[1;32m     47\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlefteyeCascade \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mCascadeClassifier(lefteyeCascadeFilePath)\n\u001b[1;32m     48\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrighteyeCascade \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mCascadeClassifier(righteyeCascadeFilePath)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import time\n",
@@ -133,37 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Camera 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-25 12:32:52.956 Python[28469:1414581] WARNING: Secure coding is not enabled for restorable state! Enable secure coding by implementing NSApplicationDelegate.applicationSupportsSecureRestorableState: and returning YES.\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb Celda 2\u001b[0m line \u001b[0;36m5\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W3sZmlsZQ%3D%3D?line=51'>52</a>\u001b[0m B, G, R \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39msplit(frame)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W3sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m \u001b[39m# Search face with a specific setup for face and eye detection\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W3sZmlsZQ%3D%3D?line=54'>55</a>\u001b[0m values \u001b[39m=\u001b[39m FDet\u001b[39m.\u001b[39;49mSingleFaceEyesDetection(frame, FDet\u001b[39m.\u001b[39;49mFaceDetectors[imodoF], FDet\u001b[39m.\u001b[39;49mEyeDetectors[imodoE])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W3sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m \u001b[39mif\u001b[39;00m values \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W3sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m     face, eyes, shape \u001b[39m=\u001b[39m values\n",
-      "File \u001b[0;32m~/Desktop/Universidad/VC/VC/Practica4/FaceDetectors.py:338\u001b[0m, in \u001b[0;36mFaceDetector.SingleFaceEyesDetection\u001b[0;34m(self, img, facedet, eyesdet)\u001b[0m\n\u001b[1;32m    335\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mSingleFaceEyesDetection\u001b[39m(\u001b[39mself\u001b[39m, img,facedet,eyesdet):\n\u001b[1;32m    337\u001b[0m     \u001b[39mif\u001b[39;00m facedet \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mVJ\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m# and eyesdet == 'VJ':\u001b[39;00m\n\u001b[0;32m--> 338\u001b[0m         face,eyes \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mDetectLargestFaceEyesVJ(img)\n\u001b[1;32m    340\u001b[0m         \u001b[39mreturn\u001b[39;00m face, eyes, []\n\u001b[1;32m    342\u001b[0m     \u001b[39melif\u001b[39;00m facedet \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mDLIB\u001b[39m\u001b[39m'\u001b[39m:\n",
-      "File \u001b[0;32m~/Desktop/Universidad/VC/VC/Practica4/FaceDetectors.py:94\u001b[0m, in \u001b[0;36mFaceDetector.DetectLargestFaceEyesVJ\u001b[0;34m(self, img)\u001b[0m\n\u001b[1;32m     89\u001b[0m REy \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m     93\u001b[0m \u001b[39m# Detect faces in input image\u001b[39;00m\n\u001b[0;32m---> 94\u001b[0m faces \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfaceCascade\u001b[39m.\u001b[39;49mdetectMultiScale(\n\u001b[1;32m     95\u001b[0m     img,\n\u001b[1;32m     96\u001b[0m     scaleFactor\u001b[39m=\u001b[39;49m\u001b[39m1.1\u001b[39;49m,\n\u001b[1;32m     97\u001b[0m     minNeighbors\u001b[39m=\u001b[39;49m\u001b[39m5\u001b[39;49m,\n\u001b[1;32m     98\u001b[0m     minSize\u001b[39m=\u001b[39;49m(\u001b[39m30\u001b[39;49m, \u001b[39m30\u001b[39;49m),\n\u001b[1;32m     99\u001b[0m     flags\u001b[39m=\u001b[39;49mcv2\u001b[39m.\u001b[39;49mCASCADE_SCALE_IMAGE\n\u001b[1;32m    100\u001b[0m )\n\u001b[1;32m    102\u001b[0m iface \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgetLargest(faces)\n\u001b[1;32m    103\u001b[0m \u001b[39mif\u001b[39;00m iface \u001b[39m<\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    104\u001b[0m     \u001b[39m#cv2.imshow('Detection', img)\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import time\n",
@@ -285,35 +244,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Camera 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-25 12:33:21.393 Python[28484:1415187] WARNING: Secure coding is not enabled for restorable state! Enable secure coding by implementing NSApplicationDelegate.applicationSupportsSecureRestorableState: and returning YES.\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb Celda 3\u001b[0m line \u001b[0;36m5\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W4sZmlsZQ%3D%3D?line=51'>52</a>\u001b[0m B, G, R \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39msplit(frame)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W4sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m \u001b[39m# Search face with a specific setup for face and eye detection\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W4sZmlsZQ%3D%3D?line=54'>55</a>\u001b[0m values \u001b[39m=\u001b[39m FDet\u001b[39m.\u001b[39;49mSingleFaceEyesDetection(frame, FDet\u001b[39m.\u001b[39;49mFaceDetectors[imodoF], FDet\u001b[39m.\u001b[39;49mEyeDetectors[imodoE])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W4sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m \u001b[39mif\u001b[39;00m values \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/emmartel/Desktop/Universidad/VC/VC/Practica4/VC_P4_ENTREGA.ipynb#W4sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m     face, eyes, shape \u001b[39m=\u001b[39m values\n",
-      "File \u001b[0;32m~/Desktop/Universidad/VC/VC/Practica4/FaceDetectors.py:338\u001b[0m, in \u001b[0;36mFaceDetector.SingleFaceEyesDetection\u001b[0;34m(self, img, facedet, eyesdet)\u001b[0m\n\u001b[1;32m    335\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mSingleFaceEyesDetection\u001b[39m(\u001b[39mself\u001b[39m, img,facedet,eyesdet):\n\u001b[1;32m    337\u001b[0m     \u001b[39mif\u001b[39;00m facedet \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mVJ\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m# and eyesdet == 'VJ':\u001b[39;00m\n\u001b[0;32m--> 338\u001b[0m         face,eyes \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mDetectLargestFaceEyesVJ(img)\n\u001b[1;32m    340\u001b[0m         \u001b[39mreturn\u001b[39;00m face, eyes, []\n\u001b[1;32m    342\u001b[0m     \u001b[39melif\u001b[39;00m facedet \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mDLIB\u001b[39m\u001b[39m'\u001b[39m:\n",
-      "File \u001b[0;32m~/Desktop/Universidad/VC/VC/Practica4/FaceDetectors.py:117\u001b[0m, in \u001b[0;36mFaceDetector.DetectLargestFaceEyesVJ\u001b[0;34m(self, img)\u001b[0m\n\u001b[1;32m    115\u001b[0m offx2LE \u001b[39m=\u001b[39m fx \u001b[39m+\u001b[39m (\u001b[39mint\u001b[39m)(fw \u001b[39m*\u001b[39m \u001b[39m0.6\u001b[39m)\n\u001b[1;32m    116\u001b[0m roi1 \u001b[39m=\u001b[39m img[offy1:offy2, offx1LE:offx2LE]\n\u001b[0;32m--> 117\u001b[0m LE \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlefteyeCascade\u001b[39m.\u001b[39;49mdetectMultiScale(roi1)\n\u001b[1;32m    118\u001b[0m iLE \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgetLargest(LE)\n\u001b[1;32m    120\u001b[0m \u001b[39m# Right eye n the upper-right area of the face\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import time\n",
@@ -384,8 +315,8 @@
     "                        cv2.circle(frame, (sx, sy), 2, (255, 255, 255), -1)\n",
     "\n",
     "                # Calculate mask position\n",
-    "                mask_x = int(lex - w/4)  # Adjust these values as needed\n",
-    "                mask_y = int(ley - h/4)\n",
+    "                mask_x = int(lex - w/2)  # Adjust these values as needed\n",
+    "                mask_y = int(ley - h)\n",
     "                mask_w = int(w * 1.5)\n",
     "                mask_h = int(h * 1.5)\n",
     "\n",
