Codigo ejecutado en VC_P5 entregable

--- a/Practica5/VC_P5_Entregable.ipynb
+++ b/Practica5/VC_P5_Entregable.ipynb
@@ -2417,11 +2417,11 @@
     "# -------------------- Ejemplo con imagenes -------------------- \n",
     "# detector.detectar(f'./images/{14}.png')\n",
     "\n",
-    "# for i in range(1, 16):\n",
-    "    # detector.detectar(f'./images/{i}.png')\n",
+    "for i in range(1, 16):\n",
+    "     detector.detectar(f'./images/{i}.png')\n",
     "    \n",
     "# -------------------- Ejemplo con vídeo -------------------- \n",
-    "detector.detectar(f'./videos/video2.mp4', es_video=True)"
+    "# detector.detectar(f'./videos/video2.mp4', es_video=True)"
    ]
   }
  ],
