--- a/Practica6/VC_P6.ipynb
+++ b/Practica6/VC_P6.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,20 +181,22 @@
     "\n",
     "\n",
     "class HatOverlayManager:\n",
-    "    def __init__(self, hat_manager):\n",
+    "    def __init__(self, hat_manager, min_confidence=2, analysis_frequency=1):\n",
     "        self.hat_manager = hat_manager\n",
     "        self.counter_frames = 0\n",
     "        self.last_analysis = None\n",
+    "        self.min_confidence = min_confidence\n",
+    "        self.analysis_frequency = analysis_frequency\n",
     "\n",
     "    def analyze_and_overlay(self, frame):\n",
     "        \"\"\"Analiza las caras y superpone gorros.\"\"\"\n",
     "        self.counter_frames += 1\n",
-    "        if self.counter_frames % 1 == 0:\n",
+    "        if self.counter_frames % self.analysis_frequency == 0:\n",
     "            self.last_analysis = DeepFace.analyze(img_path=frame, enforce_detection=False, actions=['race'])\n",
     "\n",
     "        if self.last_analysis:\n",
     "            for result in self.last_analysis:\n",
-    "                if result['face_confidence'] >= 4:\n",
+    "                if result['face_confidence'] >= self.min_confidence:\n",
     "                    # Extraer la región donde se encuentra el rostro y la raza dominante\n",
     "                    region, dominant_race = result['region'], result['dominant_race']\n",
     "                    # Obtiene las coordenadas de la cara\n",
@@ -240,17 +242,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Game:\n",
-    "    def __init__(self, source_video):\n",
+    "    def __init__(self, source_video, game_interface=None, dynamic_buttons=None, overlay_manager=None):\n",
     "        self.vid = self.__check_source(source_video)\n",
-    "        self.game_interface = self.__init_component(GameInterface)\n",
-    "        self.dynamic_buttons =  self.__init_component(DynamicButtons)\n",
     "        self.game_state = GameState()\n",
-    "        self.overlay_manayer = HatOverlayManager(HatManager())\n",
+    "        self.game_interface = game_interface if game_interface is not None else self.__init_component(GameInterface)\n",
+    "        self.dynamic_buttons = dynamic_buttons if dynamic_buttons is not None else  self.__init_component(DynamicButtons)\n",
+    "        self.overlay_manayer = overlay_manager if overlay_manager is not None else HatOverlayManager(hat_manager=HatManager(),\n",
+    "                                                                                                     min_confidence = 3,analysis_frequency=2 )\n",
     "\n",
     "        \n",
     "    def __check_source(self, source):\n",
@@ -330,9 +333,13 @@
     "                self.game_state.set_selected_hat(nombre_gorro)\n",
     "                break\n",
     "            \n",
+    "# Con overlay Manager personalizado\n",
+    "# ov_manager_2 = HatOverlayManager(hat_manager=HatManager(),min_confidence = 3,analysis_frequency=10)\n",
+    "# game = Game('./video_test_5.mp4', overlay_manager= ov_manager_2)\n",
+    "# game.start()\n",
     "\n",
-    "game = Game('./video_test_5.mp4')\n",
-    "#game = Game(0)\n",
+    "# Con overlay manager por defecto\n",
+    "game = Game(0)\n",
     "game.start()\n"
    ]
   }
