--- a/practica6/identificadorFacial.ipynb
+++ b/practica6/identificadorFacial.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El directorio 'Images_class_model' se ha creado correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -52,12 +60,14 @@
     "        )\n",
     "\n",
     "        for (x, y, w, h) in faces:\n",
-    "            cv2.rectangle(frame, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
-    "            roi = gray[y:y+h, x:x+w]\n",
-    "            \n",
-    "            # Guarda la imagen en la carpeta específica de la persona\n",
-    "            cv2.imwrite(f'{persona_dir}/{class_model_name}_{count}.png', roi)\n",
-    "            count += 1\n",
+    "            # Filtrar falsos positivos por tamaño de contorno\n",
+    "            if w >= 300 and w <= 600 and h >= 300 and h <= 600:\n",
+    "                cv2.rectangle(frame, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
+    "                roi = gray[y:y+h, x:x+w]\n",
+    "\n",
+    "                # Guarda la imagen en la carpeta específica de la persona\n",
+    "                cv2.imwrite(f'{persona_dir}/{class_model_name}_{count}.png', roi)\n",
+    "                count += 1\n",
     "\n",
     "        cv2.imshow('Video', frame)\n",
     "\n",
@@ -157,12 +167,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Capturar imágenes para el dataset\n",
-    "name = 'Modesto'\n",
+    "name = 'Emilio3'\n",
     "image_capture(name)"
    ]
   },
@@ -195,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
