reconocimiento facial en tiempo real finalizado

--- a/practica6/identificadorFacial.ipynb
+++ b/practica6/identificadorFacial.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +41,7 @@
     "\n",
     "def image_capture(class_model_name):\n",
     "    persona_dir = os.path.join(data_dir, class_model_name)\n",
+    "    # extra_faces_dir = os.path.join(data_dir, 'extra_faces')  # Carpeta para caras adicionales\n",
     "    if not os.path.exists(persona_dir):\n",
     "        os.makedirs(persona_dir)\n",
     "\n",
@@ -59,15 +60,19 @@
     "            flags=cv2.CASCADE_SCALE_IMAGE\n",
     "        )\n",
     "\n",
-    "        for (x, y, w, h) in faces:\n",
-    "            # Filtrar falsos positivos por tamaño de contorno\n",
-    "            if w >= 300 and w <= 600 and h >= 300 and h <= 600:\n",
-    "                cv2.rectangle(frame, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
-    "                roi = gray[y:y+h, x:x+w]\n",
+    "        # Solo incrementar el contador si se detecta al menos una cara\n",
+    "        if len(faces) > 0:\n",
+    "            for i, (x, y, w, h) in enumerate(faces):\n",
+    "                # Filtrar caras por tamaño de contorno\n",
+    "                if w >= 300 and w <= 600 and h >= 300 and h <= 600:\n",
+    "                    cv2.rectangle(frame, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
+    "                    roi = gray[y:y+h, x:x+w]\n",
     "\n",
-    "                # Guarda la imagen en la carpeta específica de la persona\n",
-    "                cv2.imwrite(f'{persona_dir}/{class_model_name}_{count}.png', roi)\n",
-    "                count += 1\n",
+    "                    # Determinar la ruta de la carpeta\n",
+    "                    target_dir = persona_dir\n",
+    "                    # Guardar la imagen en la carpeta específica\n",
+    "                    cv2.imwrite(f'{target_dir}/{class_model_name}_{count}.png', roi)\n",
+    "                    count += 1\n",
     "\n",
     "        cv2.imshow('Video', frame)\n",
     "\n",
@@ -167,20 +172,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Capturar imágenes para el dataset\n",
-    "name = 'Emilio3'\n",
+    "name = 'Antonio'\n",
     "image_capture(name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precisión del modelo: 1.0\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.8.1) /Users/xperience/GHA-OpenCV-Python/_work/opencv-python/opencv-python/opencv/modules/imgproc/src/color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cvtColor'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m data_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mImages_class_model\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      3\u001b[0m classifier, pca \u001b[38;5;241m=\u001b[39m train_model(data_dir)\n\u001b[0;32m----> 4\u001b[0m \u001b[43mreal_time_recognition\u001b[49m\u001b[43m(\u001b[49m\u001b[43mclassifier\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpca\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[3], line 111\u001b[0m, in \u001b[0;36mreal_time_recognition\u001b[0;34m(classifier, pca)\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m    110\u001b[0m     ret, frame \u001b[38;5;241m=\u001b[39m video_capture\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m--> 111\u001b[0m     gray \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcvtColor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCOLOR_BGR2GRAY\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    113\u001b[0m     faces \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mCascadeClassifier(cv2\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mhaarcascades \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhaarcascade_frontalface_default.xml\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mdetectMultiScale(\n\u001b[1;32m    114\u001b[0m         gray,\n\u001b[1;32m    115\u001b[0m         scaleFactor\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.1\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    118\u001b[0m         flags\u001b[38;5;241m=\u001b[39mcv2\u001b[38;5;241m.\u001b[39mCASCADE_SCALE_IMAGE\n\u001b[1;32m    119\u001b[0m     )\n\u001b[1;32m    121\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m (x, y, w, h) \u001b[38;5;129;01min\u001b[39;00m faces:\n",
+      "\u001b[0;31merror\u001b[0m: OpenCV(4.8.1) /Users/xperience/GHA-OpenCV-Python/_work/opencv-python/opencv-python/opencv/modules/imgproc/src/color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cvtColor'\n"
+     ]
+    }
+   ],
    "source": [
     "# Entrenar el modelo y realizar el reconocimiento facial en tiempo real\n",
     "data_dir = 'Images_class_model'\n",
