--- a/Practica6/VC_P6_Propuesta1_JuegoDeRazas.ipynb
+++ b/Practica6/VC_P6_Propuesta1_JuegoDeRazas.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
     "\n",
     "\n",
     "class HatOverlayManager:\n",
-    "    def __init__(self, hat_manager, min_confidence=2, analysis_frequency=1):\n",
+    "    def __init__(self, hat_manager, min_confidence=2, analysis_frequency=2):\n",
     "        self.hat_manager = hat_manager\n",
     "        self.counter_frames = 0\n",
     "        self.last_analysis = None\n",
@@ -242,9 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No se pudo leer el frame. Fin del video o error de lectura.\n"
+     ]
+    }
+   ],
    "source": [
     "class Game:\n",
     "    def __init__(self, source_video, game_interface=None, dynamic_buttons=None, overlay_manager=None):\n",
