Propuesta Razas Actualizada

--- a/Practica6/VC_P6_Propuesta1_JuegoDeRazas.ipynb
+++ b/Practica6/VC_P6_Propuesta1_JuegoDeRazas.ipynb
@@ -241,6 +241,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clase que gestiona el juego"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
