Improved UI + Added Score Counter

--- a/TrabajoFinal/backend.ipynb
+++ b/TrabajoFinal/backend.ipynb
@@ -1285,7 +1285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Servidor con imagen"
+    "## Servidor con imagen y video"
    ]
   },
   {
