Finished Project with Doc

--- a/TrabajoFinal/backend.ipynb
+++ b/TrabajoFinal/backend.ipynb
@@ -4,44 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Servidor Test con Texto"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from flask import Flask, jsonify, request\n",
-    "\n",
-    "app = Flask(__name__)\n",
-    "\n",
-    "@app.route('/process-text', methods=['POST'])\n",
-    "def process_text():\n",
-    "    data = request.json  # Obtener datos JSON de la solicitud POST\n",
-    "    if data and 'text' in data:\n",
-    "        text = data['text']  # Obtener la cadena de texto del campo 'text'\n",
-    "        # Puedes realizar cualquier procesamiento deseado en la cadena de texto aquí.\n",
-    "        # Por ejemplo, puedes transformarla a mayúsculas.\n",
-    "        text_uppercase = text.upper()\n",
-    "        \n",
-    "        # Devolver la cadena de texto procesada en formato JSON.\n",
-    "        return jsonify({\"processed_text\": text_uppercase})\n",
-    "    else:\n",
-    "        return jsonify({\"error\": \"No se ha proporcionado una cadena de texto válida\"}), 400\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    app.run(debug=False, host='localhost', port=5000)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%tb"
+    "# Backend Server"
    ]
   },
   {
@@ -53,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +29,7 @@
     "              'O', 'P', 'Q', 'R', 'S', 'T', 'U',\n",
     "              'V', 'W', 'X', 'Y', 'Z']\n",
     "\n",
-    "def process_frame(frame, target_letter, confidence_threshold=0.3):\n",
+    "def isLetterInImage(frame, target_letter, confidence_threshold=0.3):\n",
     "    # Realiza la detección utilizando el modelo\n",
     "    results = model(frame, stream=True)\n",
     "    \n",
@@ -96,8 +59,8 @@
     "\n",
     "frame = cv2.imread(image_path)\n",
     "\n",
-    "result = process_frame(frame, target_letter)\n",
-    "print(result)\n"
+    "# result = isLetterInImage(frame, target_letter)\n",
+    "# print(result)\n"
    ]
   },
   {
@@ -109,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,8 +165,8 @@
     "input_video_path = './assets/test_video_a.mp4'\n",
     "target_letter = 'A'\n",
     "\n",
-    "result = isLetterInVideo(input_video_path, target_letter)\n",
-    "print(f\"¿Se detectó la letra {target_letter} en más del 60% del video?: {result}\")"
+    "# result = isLetterInVideo(input_video_path, target_letter)\n",
+    "# print(f\"¿Se detectó la letra {target_letter} en más del 60% del video?: {result}\")"
    ]
   },
   {
@@ -215,21 +178,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://10.22.146.19:5000\n",
+      "Press CTRL+C to quit\n",
+      "10.22.146.19 - - [16/Jan/2024 23:50:30] \"GET / HTTP/1.1\" 200 -\n",
+      "10.22.146.19 - - [16/Jan/2024 23:50:30] \"GET /templates/style/images/AppLogo.png HTTP/1.1\" 304 -\n",
+      "10.22.146.19 - - [16/Jan/2024 23:50:30] \"GET /templates/style/images/interactive-lessons.png HTTP/1.1\" 304 -\n",
+      "10.22.146.19 - - [16/Jan/2024 23:50:30] \"GET /templates/style/images/real-time-detection.jpg HTTP/1.1\" 304 -\n",
+      "10.22.146.19 - - [16/Jan/2024 23:50:30] \"GET /templates/style/css/styles.css HTTP/1.1\" 200 -\n",
+      "10.22.146.19 - - [16/Jan/2024 23:50:30] \"GET /templates/style/images/community.png HTTP/1.1\" 304 -\n",
+      "10.22.146.19 - - [16/Jan/2024 23:50:30] \"GET /templates/style/images/background.jpg HTTP/1.1\" 304 -\n"
+     ]
+    }
+   ],
    "source": [
-    "from flask import Flask, jsonify, request\n",
+    "from flask import Flask, jsonify, request, render_template\n",
     "import cv2, os\n",
     "import numpy as np\n",
     "from IPython.display import Image, display\n",
     "from werkzeug.utils import secure_filename\n",
+    "import ssl\n",
     "\n",
     "\n",
+    "app = Flask(__name__, static_folder='./templates')\n",
     "\n",
-    "app = Flask(__name__)\n",
+    "# Solo para HTTPS\n",
+    "context = ssl.SSLContext(ssl.PROTOCOL_TLS_SERVER)\n",
+    "context.load_cert_chain('./certificates/cert.pem', './certificates/key.pem')\n",
     "\n",
-    "# Ruta para procesar la imagen\n",
+    "\n",
+    "# Ruta para mostrar un HTML básico en la raíz del servidor\n",
+    "@app.route('/')\n",
+    "def home():\n",
+    "    # Página principal\n",
+    "    return render_template('homepage.html')\n",
+    "\n",
+    "# Ruta para procesar texto\n",
+    "@app.route('/test-server', methods=['POST'])\n",
+    "def process_text():\n",
+    "    data = request.json  # Obtener datos JSON de la solicitud POST\n",
+    "    if data and 'text' in data:\n",
+    "        text = data['text']  # Obtener la cadena de texto del campo 'text'\n",
+    "        # Puedes realizar cualquier procesamiento deseado en la cadena de texto aquí.\n",
+    "        # Por ejemplo, puedes transformarla a mayúsculas.\n",
+    "        text_uppercase = text.upper()\n",
+    "        \n",
+    "        # Devolver la cadena de texto procesada en formato JSON.\n",
+    "        return jsonify({\"processed_text\": text_uppercase})\n",
+    "    else:\n",
+    "        return jsonify({\"error\": \"No se ha proporcionado una cadena de texto válida\"}), 400\n",
     "\n",
     "# Ruta para procesar la imagen\n",
     "@app.route('/process-image', methods=['POST'])\n",
@@ -253,7 +265,7 @@
     "        \n",
     "    # Procesa la imagen utilizando tu script de OpenCV\n",
     "    target_letter = request.form.get('target_letter')  # Obtiene la letra objetivo de la solicitud\n",
-    "    result = process_frame(image, target_letter)  # Llama a la función que procesa la imagen\n",
+    "    result = isLetterInImage(image, target_letter)  # Llama a la función que procesa la imagen\n",
     "    print(\"Detected letter\", target_letter, \"on image ?\", result)\n",
     "    \n",
     "    # Devuelve el resultado (True o False) como respuesta\n",
@@ -289,9 +301,9 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run(debug=False, host='10.22.146.19', port=5000) # Antes localhost\n",
+    "    # app.run(debug=False, host='10.22.146.19', port=5000, ssl_context=context) # Para HTTPS\n",
     "    # Wifi Principal: 10.22.146.19\n",
-    "    # Wifi Movil: 192.168.194.99\n",
-    "    \n"
+    "    # Wifi Movil: 192.168.194.99"
    ]
   }
  ],
