Modified Backend and Visualizer names

--- a/TrabajoFinal/VC_SignDetectionServerBackend.ipynb
+++ b/TrabajoFinal/VC_SignDetectionServerBackend.ipynb
@@ -80,7 +80,7 @@
     "from ultralytics import YOLO\n",
     "import numpy as np\n",
     "\n",
-    "def isLetterInVideo(video_path, target_letter, model_path='sign_language_1.pt', confidence_threshold=0.3, percentage_threshold=60):\n",
+    "def isLetterInVideo(video_path, target_letter, model_path='sign_language.pt', confidence_threshold=0.3, percentage_threshold=60):\n",
     "    model = YOLO(model=model_path)\n",
     "    classNames = ['A', 'B', 'C', 'D', 'E', 'F', 'G',\n",
     "                  'H', 'I', 'J', 'K', 'L', 'M', 'N', \n",
