--- a/TrabajoFinal/VC_SignDetectionVisualizer.ipynb
+++ b/TrabajoFinal/VC_SignDetectionVisualizer.ipynb
@@ -65190,25 +65190,30 @@
     "        # Realiza la detección utilizando el modelo\n",
     "        results = model(img, stream=True)\n",
     "        \n",
-    "        # Para cada detección\n",
+    "        # Variables para almacenar la detección con la mayor confianza\n",
+    "        max_confidence = 0\n",
+    "        best_box = None\n",
+    "        best_cls = None\n",
+    "        \n",
+    "        # Busca la detección con la mayor confianza\n",
     "        for r in results:\n",
     "            boxes = r.boxes\n",
     "            for box in boxes:\n",
-    "                x1, y1, x2, y2 = map(int, box.xyxy[0])\n",
     "                confidence = box.conf[0]\n",
+    "                if confidence > max_confidence and confidence >= confidence_threshold:\n",
+    "                    max_confidence = confidence\n",
+    "                    best_box = box\n",
+    "                    best_cls = int(box.cls[0])\n",
+    "                    \n",
+    "        # Dibuja solo la detección con la mayor confianza\n",
+    "        if best_box is not None:\n",
+    "            x1, y1, x2, y2 = map(int, best_box.xyxy[0])\n",
+    "            class_name = classNames[best_cls] if best_cls < len(classNames) else 'Unknown'\n",
     "\n",
-    "                # Filtra las detecciones con una confianza superior al umbral\n",
-    "                if confidence >= confidence_threshold:\n",
-    "                    cls = int(box.cls[0])\n",
-    "                    \n",
-    "                    # Convierte el identificador numérico de la clase a un nombre de clase\n",
-    "                    class_name = classNames[cls] if cls < len(classNames) else 'Unknown'\n",
-    "                    \n",
-    "                    # Dibuja el rectángulo de fondo del texto\n",
-    "                    cv2.rectangle(img, (x1, y1 - 35), (x2, y1), color=letras_colores[class_name], thickness=-1)  # -1 para rellenar el rectángulo\n",
-    "                    cv2.rectangle(img, (x1, y1), (x2, y2), color=letras_colores[class_name] , thickness=2)\n",
-    "                    # Dibuja el texto en el recuadro de fondo\n",
-    "                    cv2.putText(img, f\"{class_name} {confidence:.2f}\", (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (255, 255, 255), thickness=2)\n",
+    "            # Dibuja el rectángulo de fondo del texto y el recuadro de detección\n",
+    "            cv2.rectangle(img, (x1, y1 - 35), (x2, y1), color=letras_colores[class_name], thickness=-1)\n",
+    "            cv2.rectangle(img, (x1, y1), (x2, y2), color=letras_colores[class_name], thickness=2)\n",
+    "            cv2.putText(img, f\"{class_name} {max_confidence:.2f}\", (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (255, 255, 255), thickness=2)\n",
     "\n",
     "        # Muestra el marco con las detecciones\n",
     "        cv2.imshow('Sign Language Detection', img)\n",
